llvm/test/tools/llubi/br_poison.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define void @main() {
entry:
  br i1 poison, label %exit, label %exit

exit:
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT: Immediate UB detected: Branch on poison condition.
; CHECK-NEXT: error: Execution of function 'main' failed.
